get rid of sficonfig.h. generate partial library libsfi.o. dummy file used
Thu Mar  9 00:55:39 2006  Tim Janik  <timj@gtk.org>

        * Makefile.am: get rid of sficonfig.h. generate partial library libsfi.o.
        * dummy.cc: dummy file used to force C++ program linkage.

        * glib-extra.[hc]: removed GScanner clone.
        g_scanner_new64(): turned into a g_scanner_new() wrapper that ensures 64bit mode.

        * sfi/sfilog.[hc]:
        * sfi/sfithreads.[hc]: removed, functionality is provided by libbirnet now.

        * *.[hc]: use functions from the birnet_ namespace for threading and messages.

        * sficxx.cc: new file, used to hook up _sfi_init_*() functions with birnet_init().

        * sficxx.h: removed, contents are provided by sficxx.hh now.

        * sfidl-parser.cc: fixed 64bit scanner config.

        * sfitypes.c: removed old init code.

        * sfitypes.h: provide message function aliases in the sfi namespace to ease
        transition.

        * testsfi.c: fixed initialization.

svn path=/trunk/; revision=3493

--- a/sfi/Makefile.am
+++ b/sfi/Makefile.am
@@ -12,16 +12,16 @@ sfi_public_headers = $(strip \
 	sfivmarshal.h	sfiglue.h	sfigluecodec.h	sfiglueproxy.h	\
 	sfinote.h	sfiparams.h	sfiprimitives.h	sfiserial.h	\
 	sfitime.h	sfitypes.h	sfivalues.h	sfiustore.h	\
-	sfilog.h	sfithreads.h	sfimemory.h	sficomport.h	\
-	sficxx.h	sfi.h		\
+	sficxx.hh			sfimemory.h	sficomport.h	\
+	sfi.h								\
 )
-sfi_c_sources = $(strip \
+sfi_all_sources = $(strip \
 	sfistore.c	sficomwire.c	sfifilecrawler.c \
 	glib-extra.c	\
 	sfivmarshal.c	sfiglue.c	sfigluecodec.c	sfiglueproxy.c	\
 	sfinote.c	sfiparams.c	sfiprimitives.c	sfiserial.c	\
 	sfitime.c	sfitypes.c	sfivalues.c	sfiustore.c	\
-	sfilog.c	sfithreads.c	sfimemory.c	sficomport.c	\
+	sficxx.cc			sfimemory.c	sficomport.c	\
 	$(conditional_toyprof_sources)	\
 )
 sfi_extra_sources = $(strip \
@@ -30,15 +30,24 @@ sfi_extra_sources = $(strip \
 sfi_built_sources = $(strip \
 )
 
-$(sfi_c_sources): $(sfi_built_sources)
+$(sfi_all_sources): $(sfi_built_sources)
 
 # SFI library
+# we want a partial shared library here. libtool creates that if the library
+# name ends in .lo or .o. however automake doesn't know .lo or .o libraries,
+# so we simply build an ordinary non-installed .la library and then use our
+# own rule to build the .o from the .la pieces.
 noinst_LTLIBRARIES    = libsfi.la
 libsfiincludedir      = $(includedir)/sfi
-libsfiinclude_HEADERS = $(sfi_public_headers) sficonfig.h
-libsfi_la_SOURCES     = $(sfi_c_sources)
+libsfiinclude_HEADERS = $(sfi_public_headers)
+libsfi_la_SOURCES     = $(sfi_all_sources)
 libsfi_la_LDFLAGS     = -no-undefined # -Wl,-Bsymbolic
 libsfi_la_LIBADD      = $(SFI_LIBS) -lm
+# keep this .o rule in sync with the corresponding .la rule from Makefile.in
+libsfi.o: $(libsfi_la_OBJECTS) $(libsfi_la_DEPENDENCIES)
+	$(CXXLINK)  $(libsfi_la_LDFLAGS) $(libsfi_la_OBJECTS) # $(libsfi_la_LIBADD) $(LIBS)
+all-am: libsfi.o
+CLEANFILES += libsfi.o libsfi.lo
 
 #
 # generated sources
@@ -53,22 +62,6 @@ testidl.c: $(srcdir)/testidl.idl sfidl
 	&& mv xgen-$(@F) testidl.c
 EXTRA_DIST += testidl.idl
 
-sficonfig.h: $(top_builddir)/config.status Makefile
-	echo "/* Generated data from $< (by make $@) */" > xgen-$(@F) \
-	&& echo >> xgen-$(@F) \
-	&& echo "#define SFI_SIZEOF_PTH_MUTEX_T         (@SFI_SIZEOF_PTH_MUTEX_T@)" >> xgen-$(@F) \
-	&& echo "#define SFI_SIZEOF_PTH_COND_T          (@SFI_SIZEOF_PTH_COND_T@)" >> xgen-$(@F) \
-	&& echo "#define SFI_HAVE_MUTEXATTR_SETTYPE     (@SFI_HAVE_MUTEXATTR_SETTYPE@ && \\" >> xgen-$(@F) \
-	&& echo "                                        SFI_SIZEOF_PTH_MUTEX_T && \\" >> xgen-$(@F) \
-	&& echo "                                        SFI_SIZEOF_PTH_COND_T)" >> xgen-$(@F) \
-	&& echo >> xgen-$(@F) \
-	&& echo "/* Generated data ends here */" >> xgen-$(@F) \
-	&& (cmp -s xgen-$(@F) $@ || cp xgen-$(@F) $@) \
-	&& rm -f xgen-$(@F)
-CLEANFILES += sficonfig.h
-$(srcdir)/sfithreads.c: sficonfig.h
-$(OBJECTS): sficonfig.h
-
 #
 # programs to build
 #
@@ -77,25 +70,25 @@ common_idl_sources = sfidl-generator.cc sfidl-namespace.cc sfidl-options.cc sfid
   sfidl-factory.cc sfidl-typelist.cc sfidl-cbase.cc sfidl-clientc.cc sfidl-clientcxx.cc sfidl-corec.cc \
   sfidl-corecxx.cc sfidl-cxxbase.cc sfidl-hostc.cc glib-extra.c
 
-noinst_PROGRAMS = testsfi testcxx testsfidl
+bin_PROGRAMS = sfidl
 sfidl_SOURCES = sfidl.cc $(common_idl_sources)
 sfidl_LDADD = $(SFI_LIBS) -lm # libsfi.la
-
-bin_PROGRAMS = sfidl
-
 EXTRA_DIST += sfidl-generator.hh sfidl-namespace.hh sfidl-options.hh sfidl-parser.hh sfidl-factory.hh sfidl-typelist.hh
 EXTRA_DIST += sfidl-cbase.hh sfidl-clientc.hh sfidl-clientcxx.hh sfidl-corec.hh sfidl-corecxx.hh sfidl-cxxbase.hh sfidl-hostc.hh
 
-progs_extra_sources += sfidl-namespace.hh
-testsfi_SOURCES = testsfi.c
-testsfi_LDADD = libsfi.la $(SFI_LIBS) -lm
+noinst_PROGRAMS = testsfi testcxx testsfidl
+progs_nosfi_LDADD = $(top_builddir)/birnet/libbirnet.o $(SFI_LIBS) -lm
+progs_LDADD = $(top_builddir)/birnet/libbirnet.o libsfi.o $(SFI_LIBS) -lm
 $(srcdir)/testsfi.c: testidl.h testidl.c
-testcxx_SOURCES = testcxx.cc
-testcxx_LDADD = libsfi.la $(SFI_LIBS) -lm
+testsfi_SOURCES = testsfi.c dummy.cc
+testsfi_LDADD = $(progs_LDADD)
+testsfi_LDFLAGS =
 $(srcdir)/testcxx.cc: testidl.h testidl.c
-testsfidl_SOURCES = testsfidl.cc $(common_idl_sources)
-testsfidl_LDADD = libsfi.la $(SFI_LIBS) -lm
+testcxx_SOURCES = testcxx.cc
+testcxx_LDADD = $(progs_LDADD)
 $(srcdir)/testsfidl.cc: testidl.h testidl.c
+testsfidl_SOURCES = testsfidl.cc $(common_idl_sources)
+testsfidl_LDADD = $(progs_nosfi_LDADD)
 
 #
 # TESTS
@@ -113,5 +106,5 @@ conditional_toyprof_sources = $(TOYPROF_C_SOURCES)
 endif
 
 
-EXTRA_DIST += $(sfi_public_headers) $(sfi_extra_sources) $(progs_extra_sources) $(sfi_built_sources)
+EXTRA_DIST += $(sfi_public_headers) $(sfi_extra_sources) $(sfi_built_sources)
 MAINTAINERCLEANFILES += $(sfi_built_sources)
