don't link against libsfi.la which is included in libbse.la now
svn path=/trunk/; revision=3502

--- a/plugins/freeverb/Makefile.am
+++ b/plugins/freeverb/Makefile.am
@@ -9,7 +9,7 @@ plugindir = $(bseplugindir)
 
 freeverb_la_SOURCES = allpass.cpp comb.cpp revmodel.cpp bsefreeverbcpp.cpp bsefreeverb.c
 freeverb_la_LDFLAGS = -module -avoid-version
-freeverb_la_LIBADD  = $(top_builddir)/bse/libbse.la $(top_builddir)/sfi/libsfi.la $(BSE_LIBS) -lm
+freeverb_la_LIBADD  = $(top_builddir)/bse/libbse.la $(BSE_LIBS) -lm
 
 plugin_LTLIBRARIES = freeverb.la
 
