--- a/configure.in
+++ b/configure.in
@@ -1,6 +1,7 @@
-dnl #####################################
-dnl #### include special BEAST macros ###
-dnl #####################################
+dnl # Birnet
+dnl # GNU Lesser General Public License version 2 or any later version.
+
+# include BEAST specific macros
 builtin(include, acbeast.m4)dnl
 
 #
@@ -69,6 +70,9 @@ else
 fi
 ])
 
+# architecture information
+AC_CANONICAL_TARGET
+AC_DEFINE_UNQUOTED(BST_ARCH_NAME, "$target", [Architecture Description])
 
 # initialize automake, don't define PACKAGE and VERSION
 AM_INIT_AUTOMAKE(beast, $BST_VERSION, no-define)
@@ -78,10 +82,6 @@ AC_PROG_MAKE_SET
 
 # Disable automatic maintainer mode.
 AM_MAINTAINER_MODE
-
-# architecture information
-AC_CANONICAL_TARGET
-AC_DEFINE_UNQUOTED(BST_ARCH_NAME, "$target", [Architecture Description])
 
 # declare --enable-* args and collect ac_help strings
 AC_ARG_ENABLE(debug,       [  --enable-debug=[no/minimum/yes] turn on debugging [default=$debug_default]],,enable_debug=$debug_default)
@@ -162,7 +162,7 @@ dnl # Include sub-package macro definitions
 dnl #
 builtin(include, birnet/configure.inc)dnl
 #include(birnet/configure.inc)
-AC_DEFUN(DUMMY_DEFS,
+AC_DEFUN([DUMMY_DEFS],
 [
     # work around stupid automake (doesn't figure includes)
     AC_SUBST(BIRNET_CFLAGS)
@@ -172,7 +172,7 @@ AC_DEFUN(DUMMY_DEFS,
 dnl #
 dnl # Define package requirements.
 dnl #
-AC_DEFUN(AC_I18N_REQUIREMENTS,
+AC_DEFUN([AC_I18N_REQUIREMENTS],
 [
     dnl # TRANSLATORS: for each new translation added to ALL_LINGUAS, please also update
     dnl # the corresponding links in docs/site-development.texi (search for ALL_LINGUAS).
@@ -207,7 +207,7 @@ AC_DEFUN(AC_I18N_REQUIREMENTS,
     AM_GLIB_GNU_GETTEXT
     AC_PROG_INTLTOOL
 ])
-AC_DEFUN(AC_SFI_REQUIREMENTS,
+AC_DEFUN([AC_SFI_REQUIREMENTS],
 [
     dnl # We need GLib with friends
     PKG_CHECK_MODULES(GLIB_GOMT, glib-2.0 >= 2.4.11 gobject-2.0 gmodule-no-export-2.0 gthread-2.0)
@@ -228,7 +228,7 @@ AC_DEFUN(AC_SFI_REQUIREMENTS,
     sfidlstdincdir=${includedir}
     AC_SUBST(sfidlstdincdir)
 ])
-AC_DEFUN(AC_BSE_REQUIREMENTS,
+AC_DEFUN([AC_BSE_REQUIREMENTS],
 [
     dnl # --- BSE version ---
     AC_DEFINE_UNQUOTED(BSE_VERSION, "$BSE_VERSION", [BSE Version])
@@ -363,7 +363,7 @@ AC_DEFUN(AC_BSE_REQUIREMENTS,
     bseuserdatadir='~/beast'
     AC_SUBST(bseuserdatadir)
 ])
-AC_DEFUN(AC_BSE_SHELL_REQUIREMENTS,
+AC_DEFUN([AC_BSE_SHELL_REQUIREMENTS],
 [
     BSE_SHELL_CFLAGS="$BSE_CFLAGS"
     BSE_SHELL_LIBS="$BSE_LIBS"
@@ -399,7 +399,7 @@ AC_DEFUN(AC_BSE_SHELL_REQUIREMENTS,
     AC_SUBST(BSE_SHELL_CFLAGS)
     AC_SUBST(BSE_SHELL_LIBS)
 ])
-AC_DEFUN(AC_GXK_REQUIREMENTS,
+AC_DEFUN([AC_GXK_REQUIREMENTS],
 [
     dnl # required libraries
     DEPENDANCIES=
@@ -415,7 +415,7 @@ AC_DEFUN(AC_GXK_REQUIREMENTS,
     AC_SUBST(GXK_CFLAGS)
     AC_SUBST(GXK_LIBS)
 ])
-AC_DEFUN(AC_BEAST_REQUIREMENTS,
+AC_DEFUN([AC_BEAST_REQUIREMENTS],
 [
     dnl # start where GXK left off
     BEAST_CFLAGS="$GXK_CFLAGS"
@@ -469,13 +469,13 @@ AC_DEFUN(AC_BEAST_REQUIREMENTS,
     beastskinsdir=$beastbasedir/v$BIN_VERSION/skins
     AC_SUBST(beastskinsdir)
 ])
-AC_DEFUN(AC_SUIDMAIN_REQUIREMENTS,
+AC_DEFUN([AC_SUIDMAIN_REQUIREMENTS],
 [
     dnl # figure everything required by the suid wrapper
     AC_CHECK_FUNCS(seteuid)
     AC_CHECK_FUNCS(setreuid)
 ])
-AC_DEFUN(AC_BSE_SNDDEV_CHECK,
+AC_DEFUN([AC_BSE_SNDDEV_CHECK],
 [
     dnl # Check for potential pcm devices
 	
@@ -540,7 +540,7 @@ AC_DEFUN(AC_BSE_SNDDEV_CHECK,
 	AC_MSG_ERROR([unable to find any sound drivers/devices])
     fi
 ])
-AC_DEFUN(AC_DOC_REQUIREMENTS,
+AC_DEFUN([AC_DOC_REQUIREMENTS],
 [
 ])
 
