install robots.txt and favicon.ico.
Fri Mar 10 18:06:26 2006  Tim Janik  <timj@gtk.org>

        * web/Makefile.am: install robots.txt and favicon.ico.

        * web/robots.txt: new file to avoid constant web server errors.
        allow access to everything for all spiders by default.

        * web/wiki.doxi: added meta header to avoid indexing of generated
        wiki pages.

        * web/web-images/favicon.ico: transparent mini beast logo.

        * web/webframe.doxi:
        * web/webmenu.doxi: link to favicon.ico.

svn path=/trunk/; revision=3512

--- a/web/Makefile.am
+++ b/web/Makefile.am
@@ -12,6 +12,9 @@ PHP_TARGETS = $(strip			\
 )
 HTML_TARGETS = $(strip			\
 	html/.htaccess			\
+	html/robots.txt			\
+	html/favicon.ico		\
+	\
 	html/about.html			\
 	html/contact.html		\
 	html/download.html		\
@@ -100,6 +103,10 @@ html/%.phtml: %.doxi
 html/%.html: %.doxi
 	$(DOXER) doxi2html $(strip $< -d html/  -D TOP_WEBDIR "." $(DOXIDEFS))
 html/.htaccess: htaccess.in
+	cp $< $@
+html/robots.txt: robots.txt
+	cp $< $@
+html/favicon.ico: web-images/favicon.ico
 	cp $< $@
 
 # copy rules
@@ -251,7 +258,7 @@ clean:
 	-rmdir -p html/rdocu-sfi/ html/rdocu-bse/ html/rdocu-gxk/
 	rm -f tmpdoxi-sfi/* tmpdoxi-bse/* tmpdoxi-gxk/*
 	-rmdir -p tmpdoxi-sfi/ tmpdoxi-bse/ tmpdoxi-gxk/
-	rm -f html/* html/.htaccess
+	rm -f html/* html/.htaccess html/robots.txt html/favicon.ico
 	-rmdir -p html/
 	rm -f php/*
 	-rmdir -p php/
