--- a/bse/zintern/Makefile.am
+++ b/bse/zintern/Makefile.am
@@ -1,7 +1,7 @@
 # BEAST - Bedevilled Audio System
 # Copyright (C) 2003 Tim Janik
 #
-## Makefile.am for BSE zintern
+## GNU Lesser General Public License version 2 or any later version.
 
 INCLUDES = -I$(top_srcdir) -I$(top_builddir) $(BSE_CFLAGS) -DG_DISABLE_DEPRECATED -DG_DISABLE_CONST_RETURNS
 
