--- a/doxer/Makefile.am
+++ b/doxer/Makefile.am
@@ -1,9 +1,7 @@
 # Doxer - Software documentation system
 # Copyright (C) 2005-2006 Tim Janik
 #
-# GNU General Public License version 2 or (at your option) any later version.
-#
-## Makefile.am for doxer/
+## GNU Lesser General Public License version 2 or any later version.
 
 
 clean:
