--- a/birnet/tests/Makefile.am
+++ b/birnet/tests/Makefile.am
@@ -1,7 +1,7 @@
 # Birnet
 # Copyright (C) 2006 Tim Janik
 #
-# GNU General Public License version 2 or (at your option) any later version.
+## GNU Lesser General Public License version 2 or any later version.
 
 INCLUDES	= -I$(top_srcdir) -I$(top_builddir) -I. $(BIRNET_CFLAGS)
 DEFS		= -DG_LOG_DOMAIN='"birnet/tests/"__FILE__":PRG"' -DPARANOID -DG_DISABLE_CONST_RETURNS
