updated source file lists and .po files.
Sun Mar 12 12:02:47 2006  Tim Janik  <timj@gtk.org>

        * updated source file lists and .po files.

        * eo.po: fixed Project-Id-Version.

svn path=/trunk/; revision=3519

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -60,6 +60,7 @@ beast-gtk/gxk/gxkparam-scale.c
 beast-gtk/gxk/gxkparam-spinner.c
 beast-gtk/gxk/gxkparam-toggle.c
 beast-gtk/gxk/gxksimplelabel.c
+birnet/birnetmsg.c
 bse/bseamplifier.idl
 bse/bseautodoc.c
 bse/bsebiquadfilter.c
@@ -127,5 +128,4 @@ plugins/davsyndrum.c
 plugins/davxtalstrings.c
 plugins/evaluator/bseevaluator.idl
 plugins/freeverb/bsefreeverb.c
-sfi/sfilog.c
 tools/bsewavetool.cc
