--- a/beast-gtk/dialogs/Makefile.am
+++ b/beast-gtk/dialogs/Makefile.am
@@ -2,7 +2,7 @@
 # Copyright (C) 2003 Tim Janik
 #
 ## GNU Lesser General Public License version 2 or any later version.
-
+include $(top_srcdir)/Makefile.decl
 
 ZFILE_DEFS = $(strip \
 	bst-radgets-standard	$(srcdir)/radgets-standard.xml	\
