--- a/birnet/Makefile.am
+++ b/birnet/Makefile.am
@@ -2,6 +2,7 @@
 # Copyright (C) 2006 Tim Janik
 #
 ## GNU Lesser General Public License version 2 or any later version.
+include $(top_srcdir)/Makefile.decl
 
 SUBDIRS		= . tests
 INCLUDES  	= -I$(top_srcdir) -I$(top_builddir) -I$(srcdir) -I. $(BIRNET_CFLAGS)
