--- a/doxer/Makefile.am
+++ b/doxer/Makefile.am
@@ -2,7 +2,7 @@
 # Copyright (C) 2005-2006 Tim Janik
 #
 ## GNU Lesser General Public License version 2 or any later version.
-
+include $(top_srcdir)/Makefile.decl
 
 clean:
 	rm -f *.pyc
