--- a/tests/scripts/Makefile.am
+++ b/tests/scripts/Makefile.am
@@ -1,6 +1,7 @@
 # Beast Tests
 #
 ## GNU Lesser General Public License version 2 or any later version.
+include $(top_srcdir)/Makefile.decl
 
 EXTRA_DIST += $(strip \
 	waveloadtest.scm \
