--- a/web/Makefile.am
+++ b/web/Makefile.am
@@ -1,7 +1,8 @@
 # BEAST - Bedevilled Audio System
 # Copyright (C) 2005-2006 Tim Janik
 #
-## GNU Lesser General Public License version 2 or any later version.                                                                                          
+## GNU Lesser General Public License version 2 or any later version.
+include $(top_srcdir)/Makefile.decl
 
 PHP_TARGETS = $(strip			\
 	php/file-browser.php		\
