--- a/bse/zintern/Makefile.am
+++ b/bse/zintern/Makefile.am
@@ -2,6 +2,7 @@
 # Copyright (C) 2003 Tim Janik
 #
 ## GNU Lesser General Public License version 2 or any later version.
+include $(top_srcdir)/Makefile.decl
 
 INCLUDES = -I$(top_srcdir) -I$(top_builddir) $(BSE_CFLAGS) -DG_DISABLE_DEPRECATED -DG_DISABLE_CONST_RETURNS
 
