--- a/drivers/bse-alsa/Makefile.am
+++ b/drivers/bse-alsa/Makefile.am
@@ -2,6 +2,7 @@
 # Copyright (C) 2004 and Tim Janik
 #
 ## GNU Lesser General Public License version 2 or any later version.
+include $(top_srcdir)/Makefile.decl
 
 # require automake 1.4
 AUTOMAKE_OPTIONS = 1.4
