--- a/plugins/evaluator/Makefile.am
+++ b/plugins/evaluator/Makefile.am
@@ -3,6 +3,7 @@
 # Copyright (C) 2000-2006 Tim Janik
 #                                                                                                                                                             
 ## GNU Lesser General Public License version 2 or any later version.
+include $(top_srcdir)/Makefile.decl
 
 #
 # Building of this plugin has been completely disabled because it never
