--- a/plugins/icons/Makefile.am
+++ b/plugins/icons/Makefile.am
@@ -2,6 +2,7 @@
 # Copyright (C) 1998-2006 Tim Janik
 #
 ## GNU Lesser General Public License version 2 or any later version.
+include $(top_srcdir)/Makefile.decl
 
 icon_pattern = *.c *.png *.xcf
 icon_list = 
