--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -1,3 +1,8 @@
+# BEAST
+#
+## GNU Lesser General Public License version 2 or any later version.
+include $(top_srcdir)/Makefile.decl
+
 EXTRA_DIST += $(strip \
 	drum-test.bse \
 	midi-test.bse \
