--- a/bse/icons/Makefile.am
+++ b/bse/icons/Makefile.am
@@ -57,7 +57,7 @@ GDK_PIXBUF_CSOURCE=gdk-pixbuf-csource
 %.c: %.png
 	$(GDK_PIXBUF_CSOURCE) --name=$(call MAKE_CNAME,$(<F))_pixstream $< >xgen-$(@F)-temp && cp xgen-$(@F)-temp $@ && rm -f xgen-$(@F)-temp
 noinst_DATA = $(SRC_IMAGES:.png=.c)
-CLEANFILES = $(noinst_DATA)
+CLEANFILES += $(noinst_DATA)
 
 # ship images with tarballs
 EXTRA_DIST += $(strip 	\
