--- a/beast-gtk/Makefile.am
+++ b/beast-gtk/Makefile.am
@@ -6,7 +6,7 @@ include $(top_srcdir)/Makefile.decl
 
 SUBDIRS = gxk dialogs icons
 
-INCLUDES = -I$(top_srcdir) -I$(top_builddir) -I$(srcdir) -I. $(BEAST_CFLAGS) -DG_DISABLE_CONST_RETURNS -DGTK_ENABLE_BROKEN
+INCLUDES += -I$(top_srcdir) -I$(top_builddir) -I$(srcdir) -I. $(BEAST_CFLAGS) -DG_DISABLE_CONST_RETURNS -DGTK_ENABLE_BROKEN
 # -DGTK_DISABLE_DEPRECATED -DGTK_DISABLE_COMPAT_H
 
 # we specify the logging domain here
@@ -16,7 +16,7 @@ DEFS += $(strip 			\
 
 # special profiling hooks
 PROFILE_SOURCE = # profile.c
-CFLAGS += # $(subst profile.c, -pg -a, $(findstring profile.c, $(<F)))
+DEFS += # $(subst profile.c, -pg -a, $(findstring profile.c, $(<F)))
 LIBS += # -lefence # -pg 
 
 # link programs against BSE and other neccessary libraries
