fix BSE_FLOAT_PARTS() and BSE_DOUBLE_PARTS() for C++ which needs
Fri Mar 31 21:57:36 2006  Tim Janik  <timj@gtk.org>

        * bseieee754.h: fix BSE_FLOAT_PARTS() and BSE_DOUBLE_PARTS() for C++
        which needs constructors for union casts.

        * tests/subnormals-aux.cc:
        * tests/subnormals.cc: test for subnormal float performance.

svn path=/trunk/; revision=3544

--- a/bse/tests/Makefile.am
+++ b/bse/tests/Makefile.am
@@ -10,7 +10,7 @@ INCLUDES += -I$(top_srcdir) -I$(top_builddir) $(SFI_CFLAGS)
 
 DEFS += -DG_LOG_DOMAIN=\"BSE-TEST\" # -DG_DISABLE_CONST_RETURNS
 
-TESTS = testfft testcxx testwavechunk
+TESTS = testfft testcxx testwavechunk subnormals
 progs_ldadd = $(top_builddir)/bse/libbse.la $(top_builddir)/sfi/libsfi.la
 testwavechunk_SOURCES = testwavechunk.c cxxdummy.cc
 testwavechunk_LDADD = $(progs_ldadd)
@@ -18,6 +18,8 @@ testfft_SOURCES = testfft.c cxxdummy.cc
 testfft_LDADD = $(progs_ldadd)
 testcxx_SOURCES = testcxx.cc
 testcxx_LDADD = $(progs_ldadd)
+subnormals_SOURCES = subnormals.cc subnormals-aux.cc
+subnormals_LDADD = $(progs_ldadd)
 
 noinst_PROGRAMS = cutvorbis magictest mathtests $(TESTS) #testwavechunk
 cutvorbis_SOURCES = cutvorbis.c cxxdummy.cc
